--- a/DGN/Views/Users/EditAsAdmin.cshtml
+++ b/DGN/Views/Users/EditAsAdmin.cshtml
@@ -38,11 +38,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Role" class="control-label"></label>
-                            <select asp-for="Role" class="form-control">
-                                <option value="Admin"> Admin </option>
-                                <option value="Author"> Author </option>
-                                <option value="Client" selected> Client </option>
-                            </select>
+                            <select asp-for="Role" class="form-control" asp-items="ViewBag.Roles"></select>
                             <span asp-validation-for="Role" class="text-danger"></span>
                         </div>
                         <div class="form-group">
