Added search button form

--- a/DGN/Views/Articles/GetAll.cshtml
+++ b/DGN/Views/Articles/GetAll.cshtml
@@ -22,7 +22,7 @@
                                 <label for="contain">Contains the words</label>
                                 <input id="containsWordsInput" class="form-control" type="text" />
                             </div>
-                            <button type="submit" class="btn btn-primary"><i class="fas fa-search"></i></button>
+                            <button type="submit" id="advancedSubmitButton" class="btn btn-primary"><i class="fas fa-search"></i></button>
                         </form>
                     </div>
                 </div>
