fixed the validations

--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -15,10 +15,21 @@
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
                             <img src="@Model.ImageLocation" alt="Admin" class="rounded-circle" width="150" height="150">
-                            <div class="mt-3" id="EditAbout">
-                                <h4>@Model.Username</h4>
-                                <p class="text-secondary mb-1">@Model.About</p>
-                            </div>
+                            @if (ViewData.ModelState.IsValid && ViewData["Error"] == null)
+                            {
+                                <div class="mt-3" id="EditAbout">
+                                    <h4>@Model.Username</h4>
+                                    <p class="text-secondary mb-1">@Model.About</p>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="mt-3">
+                                    <h4>@Model.Username</h4>
+                                    <input class="form-control" asp-for="About">
+                                    <span asp-validation-for="About" class="text-danger" value="@Model.About"></span>
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -40,61 +51,135 @@
             </div>
             <div class="col-md-8">
                 <div class="card mb-3" id="ViewProperties">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
-                            </div>
-                            <div class="col-sm-9 text-secondary">
-                                @Model.Firstname
-                            </div>
-                        </div>
-                        <hr />
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Lastname)</h6>
-                            </div>
-                            <div class="col-sm-9 text-secondary">
-                                @Model.Lastname
-                            </div>
-                        </div>
-                        <hr />
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
-                            </div>
-                            <div class="col-sm-9 text-secondary">
-                                @Model.Email
-                            </div>
-                        </div>
-                        <hr />
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Role)</h6>
-                            </div>
-                            <div class="col-sm-9 text-secondary">
-                                @Model.Role.ToString()
-                            </div>
-                        </div>
-                        <hr />
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
-                            </div>
-                            <div class="col-sm-9 text-secondary">
-                                @Model.Birthday.ToString("dd/MM/yyyy")
-                            </div>
-                        </div>
-                        @if ((User.FindFirst(ClaimTypes.NameIdentifier)?.Value).Equals(Model.Id.ToString()))
-                        {
-                            <hr />
+                    @if (ViewData.ModelState.IsValid && ViewData["Error"] == null)
+                    {
+                        <div class="card-body">
                             <div class="row">
-                                <div class="col-sm-12 text-secondary">
-                                    <button class="btn btn-info" id="EditButton">Edit</button>
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Model.Firstname
                                 </div>
                             </div>
-                        }
-                    </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Lastname)</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Model.Lastname
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Model.Email
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Role)</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Model.Role.ToString()
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Model.Birthday.ToString("dd/MM/yyyy")
+                                </div>
+                            </div>
+                            @if ((User.FindFirst(ClaimTypes.NameIdentifier)?.Value).Equals(Model.Id.ToString()))
+                            {
+                                <hr />
+                                <div class="row" id="EditButton">
+                                    <div class="col-sm-12 text-secondary">
+                                        <button class="btn btn-info">Edit</button>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-lg-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input class="form-control" asp-for="Firstname">
+                                            <span asp-validation-for="Firstname" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Lastname)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input class="form-control" asp-for="Lastname">
+                                            <span asp-validation-for="Lastname" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input asp-for="Email" class="form-control">
+                                            <span asp-validation-for="Email" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Role</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" class="form-control" value="@Model.Role" readonly>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input class="form-control" asp-for="Birthday">
+                                            <span asp-validation-for="Birthday" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Update Profile Image</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="file" name="ImageFile" id="ImageFile" />
+                                        </div>
+                                    </div>
+                                    @if (ViewBag.Error != null)
+                                    {
+                                        <div class="text-danger">@ViewBag.Error</div>
+                                    }
+                                    <div class="row" id="SaveChangesButton">
+                                        <div class="col-sm-3"></div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="submit" class="btn btn-primary px-4" value="Save Changes">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
                 <div class="card mb-3">
                     <ul class="list-group list-group-flush">
@@ -159,7 +244,7 @@
                         </div>
                         <div class="col-sm-9 text-secondary">
                             <input class="form-control" asp-for="Firstname" id="firstName">
-                            <span class="text-danger" id="firstNameMessage"></span>
+                            <span asp-validation-for="Firstname" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -168,7 +253,7 @@
                         </div>
                         <div class="col-sm-9 text-secondary">
                             <input class="form-control" asp-for="Lastname" id="lastName">
-                            <span class="text-danger" id="lastNameMessage"></span>
+                            <span asp-validation-for="Lastname" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -177,7 +262,7 @@
                         </div>
                         <div class="col-sm-9 text-secondary">
                             <input asp-for="Email" class="form-control" id="email">
-                            <span class="text-danger" id="emailMessage"></span>
+                            <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
