made buttons pretty

--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -171,11 +171,9 @@
                                         <div class="text-danger">@ViewBag.Error</div>
                                     }
                                     <div class="row">
-                                        <div class="col-sm-9 text-secondary" id="SaveChangesButton">
-                                            <input type="submit" class="btn btn-primary px-4" value="Save Changes">
-                                        </div>
-                                        <div class="col-sm-3 text-secondary" id="Cancel">
-                                            <input class="btn btn-primary px-4" value="Cancel">
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="submit" class="btn btn-primary px-4" value="Save Changes" id="SaveChangesButton">
+                                            <input type="button" class="btn btn-dark px-4"  value="Cancel" id="Cancel">
                                         </div>
                                     </div>
                                 </div>
@@ -297,11 +295,9 @@
                         <div class="text-danger">@ViewBag.Error</div>
                     }
                     <div class="row">
-                        <div class="col-sm-9 text-secondary" id="SaveChangesButton">
-                            <input type="submit" class="btn btn-primary px-4" value="Save Changes">
-                        </div>
-                        <div class="col-sm-3 text-secondary" id="Cancel">
-                            <input class="btn btn-primary px-4" value="Cancel">
+                        <div class="col-sm-9 text-secondary">
+                            <input type="submit" class="btn btn-primary px-4" value="Save Changes" id="SaveChangesButton">
+                            <input type="button" class="btn btn-dark px-4" value="Cancel" id="Cancel">
                         </div>
                     </div>
                 </div>
