only images can be uploded client side

--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -163,7 +163,7 @@
                                             <h6 class="mb-0">Update Profile Image</h6>
                                         </div>
                                         <div class="col-sm-9 text-secondary">
-                                            <input type="file" name="ImageFile" id="ImageFile" />
+                                            <input type="file" name="ImageFile" id="ImageFile" accept="image/x-png,image/jpg,image/jpeg"/>
                                         </div>
                                     </div>
                                     @if (ViewBag.Error != null)
@@ -287,7 +287,7 @@
                             <h6 class="mb-0">Update Profile Image</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            <input type="file" name="ImageFile" id="ImageFile" />
+                            <input type="file" name="ImageFile" id="ImageFile" accept="image/x-png,image/jpg,image/jpeg"/>
                         </div>
                     </div>
                     @if (ViewBag.Error != null)
