ADD: reverseGeocode - coordinate to address. Used in Delete and Details views.

--- a/DGN/Views/Branches/Create.cshtml
+++ b/DGN/Views/Branches/Create.cshtml
@@ -32,12 +32,14 @@
                         </div>
 
                         <div class="form-group">
-                            <p> Enter address 
-                                <a class="btn btn-light" onclick='SearchAdress()'  style="float: right;">
+                            <p>
+                                Enter address
+                                <a class="btn btn-light" onclick='SearchAdress()' style="float: right;">
                                     <i class="bi bi-search"></i>
                                 </a>
                             </p>
                             <input id='searchTbx' type='text' />
+                            <span id='message'></span>
                         </div>
 
                         <div class="row">
