--- a/DGN/Views/Articles/Create.cshtml
+++ b/DGN/Views/Articles/Create.cshtml
@@ -31,7 +31,7 @@
                         </div>
                         <div class="form-group">
                             <label>Upload Article Image</label>
-                            <input type="file" name="ImageFile" id="ImageFile" class="form-control-file">
+                            <input type="file" name="ImageFile" id="ImageFile" class="form-control-file" accept="image/x-png,image/jpg,image/jpeg">
                         </div>
                         @if (ViewBag.Error != null)
                         {
