added upload image to register

--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -45,6 +45,7 @@
                             <textarea asp-for="About" class="form-control"></textarea>
                             <span asp-validation-for="About" class="text-danger"></span>
                         </div>
+                        <input type="file" name="ImageFile" id="ImageFile" accept="image/x-png,image/jpg,image/jpeg" />
                         <div class="form-group">
                             <label class="control-label">Password</label>
                             <input type="password" id="Password" name="plainPass" class="form-control" />
