made upload with title, fixed image validation

--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -13,7 +13,7 @@
                         <h2>Register</h2>
                     </div>
                     <hr class="sep">
-                    <form asp-action="Register" id="registerForm">
+                    <form asp-action="Register" id="registerForm" enctype="multipart/form-data">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="Email" class="control-label"></label>
@@ -45,7 +45,10 @@
                             <textarea asp-for="About" class="form-control"></textarea>
                             <span asp-validation-for="About" class="text-danger"></span>
                         </div>
-                        <input type="file" name="ImageFile" id="ImageFile" accept="image/x-png,image/jpg,image/jpeg" />
+                        <div class="form-group">
+                            <label class="control-label">Profile Image</label>
+                            <input type="file" name="ImageFile" id="ImageFile" accept="image/x-png,image/jpg,image/jpeg" />
+                        </div>
                         <div class="form-group">
                             <label class="control-label">Password</label>
                             <input type="password" id="Password" name="plainPass" class="form-control" />
