--- a/DGN/Views/Comments/Index.cshtml
+++ b/DGN/Views/Comments/Index.cshtml
@@ -4,50 +4,140 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="container">
+    <br />
+    <p class="h1">All Comments</p>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <div id="alert-body" class="alert alert-danger" role="alert" style="display: none;">
+        <strong>Holy guacamole!</strong> An error occurred while we were processing your request, try again or stop messing with our site! :)
+        <button id="alert-button" type="button" class="close" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <br />
+    <div id="comment-section">
+        @foreach (var item in Model)
+        {
+            <div name="@Html.DisplayFor(modelItem => item.Id)" class="card text-dark bg-light mb-3" style="max-width: 100%;">
+                <div class="row h-120px">
+                    <div class="col-md-10">
+                        <div class="card-body">
+                            <a asp-controller="Users" asp-action="Profile" asp-route-id="@item.UserId" class="h5 card-title" style="color: black">@Html.DisplayFor(modelItem => item.User.FullName)</a>
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.Body)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer bg-light">
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <button type="button" class="btn btn-link"
+                            data-toggle="modal"
+                            data-target="#commentEditModal"
+                            data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
+                            data-id="@Html.DisplayFor(modelItem => item.Id)">
+                        Edit
+                    </button> |
+                    <button type="button" class="btn btn-link"
+                            data-toggle="modal"
+                            data-target="#commentDeleteModal"
+                            data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
+                            data-id="@Html.DisplayFor(modelItem => item.Id)">
+                        Delete
+                    </button>
+                </div>
+            </div>
+        }
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Body)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreationTimestamp)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RelatedArticle)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Body)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreationTimestamp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RelatedArticle.Title)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<div class="modal fade" id="commentDeleteModal" tabindex="-1" role="dialog" aria-labelledby="commentDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form id="comment-delete">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="commentDeleteModalLabel">Are you sure you want to delete this comment?</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h6></h6>
+                    <textarea class="form-control" disabled></textarea>
+                    <input id="comment-delete-id" hidden type="text" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="commentEditModal" tabindex="-1" role="dialog" aria-labelledby="commentEditModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form id="comment-edit">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="commentEditModalLabel">Edit</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <textarea id="comment-edit-body" class="form-control" maxlength="200" minlength="5" required></textarea>
+                    <input id="comment-edit-id" hidden type="text" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-info">Edit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script type="text/javascript">
+        function gettoken() {
+            var token = '@Html.AntiForgeryToken()';
+            token = $(token).val();
+            return token;
+        }
+    </script>
+
+    <script id="commentTemplate" type="text/html">
+        <div name="{id}" class="card text-dark bg-light mb-3" style="max-width: 100%;">
+            <div class="row h-120px">
+                <div class="col-md-2 h-100">
+                    <img class="rounded card-img h-100" src="{imageLocation}" />
+                </div>
+                <div class="col-md-10">
+                    <div class="card-body">
+                        <a href="/Users/Profile/{userId}" class="h5 card-title" style="color: black">{fullName}</a>
+                        <p class="card-text">{body}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer bg-light">
+                <button type="button" class="btn btn-link"
+                        data-toggle="modal"
+                        data-target="#commentEditModal"
+                        data-fullname="{fullName}"
+                        data-id="{id}">
+                    Edit
+                </button> |
+                <button type="button" class="btn btn-link"
+                        data-toggle="modal"
+                        data-target="#commentDeleteModal"
+                        data-fullname="{fullName}"
+                        data-id="{id}">
+                    Delete
+                </button>
+            </div>
+        </div>
+    </script>
+    
+    <script src="~/js/ArticleDetails.js"></script>
 }
-    </tbody>
-</table>
