--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -15,7 +15,7 @@
                 <h1 class="display-4">@Html.DisplayFor(model => model.Title)</h1>
                 <p class="lead">By: <a style="color: black" asp-action="Profile" asp-controller="Users" asp-route-id="@Model.UserId">@Html.DisplayFor(model => model.User.FullName)</a></p>
                 @if (User.FindFirstValue(ClaimTypes.Role).Equals(UserRole.Admin.ToString()) ||
-                    User.FindFirstValue(ClaimTypes.Role).Equals(UserRole.Author.ToString()))
+                   User.FindFirstValue(ClaimTypes.Role).Equals(UserRole.Author.ToString()))
                 {
                     <p>
                         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-info btn-md" role="button">Edit</a>
@@ -74,29 +74,36 @@
                     </div>
                     <div class="col-md-10">
                         <div class="card-body">
-                            <a asp-controller="Users" asp-action="Profile" asp-route-id="@item.UserId" class="h5 card-title" style="color: black">@Html.DisplayFor(modelItem => item.User.FullName)</a>
+                            <h5 class="card-title">@Html.DisplayFor(modelItem => item.User.FullName) (<a asp-controller="Users" asp-action="Profile" asp-route-id="@item.UserId">@Html.DisplayFor(modelItem => item.User.Username)</a>)</h5>
                             <p class="card-text">@Html.DisplayFor(modelItem => item.Body)</p>
                         </div>
                     </div>
                 </div>
                 @if (User.FindFirstValue(ClaimTypes.NameIdentifier).Equals(item.UserId.ToString()) ||
-                  User.FindFirstValue(ClaimTypes.Role).Equals(UserRole.Admin.ToString()))
+                 User.FindFirstValue(ClaimTypes.Role).Equals(UserRole.Admin.ToString()))
                 {
-                    <div class="card-footer bg-light">
-                        <button type="button" class="btn btn-link"
-                                data-toggle="modal"
-                                data-target="#commentEditModal"
-                                data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
-                                data-id="@Html.DisplayFor(modelItem => item.Id)">
-                            Edit
-                        </button> |
-                        <button type="button" class="btn btn-link"
-                                data-toggle="modal"
-                                data-target="#commentDeleteModal"
-                                data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
-                                data-id="@Html.DisplayFor(modelItem => item.Id)">
-                            Delete
-                        </button>
+                    <div class="card-footer text-muted">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button type="button" class="btn btn-link"
+                                        data-toggle="modal"
+                                        data-target="#commentEditModal"
+                                        data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
+                                        data-id="@Html.DisplayFor(modelItem => item.Id)">
+                                    Edit
+                                </button> |
+                                <button type="button" class="btn btn-link"
+                                        data-toggle="modal"
+                                        data-target="#commentDeleteModal"
+                                        data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
+                                        data-id="@Html.DisplayFor(modelItem => item.Id)">
+                                    Delete
+                                </button>
+                            </div>
+                            <div class="col-md-6 text-right">
+                                <p class="font-italic">Creation Date: @Html.DisplayFor(modelItem => item.CreationTimestamp)</p>
+                            </div>
+                        </div>
                     </div>
                 }
             </div>
@@ -131,22 +138,22 @@
 <div class="modal fade" id="articleDeleteModal" tabindex="-1" role="dialog" aria-labelledby="articleDeleteModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="articleDeleteModalLabel">Confirm Delete</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Are you sure you want to delete this article?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <form asp-action="Delete">
-                        <input type="hidden" asp-for="Id" />
-                        <input type="submit" value="Delete" class="btn btn-danger" />
-                    </form>
-                </div>
+            <div class="modal-header">
+                <h5 class="modal-title" id="articleDeleteModalLabel">Confirm Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this article?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="Id" />
+                    <input type="submit" value="Delete" class="btn btn-danger" />
+                </form>
+            </div>
         </div>
     </div>
 </div>
@@ -195,26 +202,33 @@
                 </div>
                 <div class="col-md-10">
                     <div class="card-body">
-                        <a href="/Users/Profile/{userId}" class="h5 card-title" style="color: black">{fullName}</a>
+                        <h5 class="card-title">{fullName} (<a href="/Users/Profile/{userId}">{username}</a>)</h5>
                         <p class="card-text">{body}</p>
                     </div>
                 </div>
             </div>
-            <div class="card-footer bg-light">
-                <button type="button" class="btn btn-link"
-                        data-toggle="modal"
-                        data-target="#commentEditModal"
-                        data-fullname="{fullName}"
-                        data-id="{id}">
-                    Edit
-                </button> |
-                <button type="button" class="btn btn-link"
-                        data-toggle="modal"
-                        data-target="#commentDeleteModal"
-                        data-fullname="{fullName}"
-                        data-id="{id}">
-                    Delete
-                </button>
+            <div class="card-footer text-muted">
+                <div class="row">
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-link"
+                                data-toggle="modal"
+                                data-target="#commentEditModal"
+                                data-fullname="{fullName}"
+                                data-id="{id}">
+                            Edit
+                        </button> |
+                        <button type="button" class="btn btn-link"
+                                data-toggle="modal"
+                                data-target="#commentDeleteModal"
+                                data-fullname="{fullName}"
+                                data-id="{id}">
+                            Delete
+                        </button>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <p class="font-italic">Creation Date: {creationTimestamp}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </script>
